# Project_FaceRecognize

Dlib/: readme.txt
OfflineProject/: CMakeLists.txt
OfflineProject/src/: UltraFace.cpp  detect.cpp  train_model2.cpp
OnlineProject/src/: detect1.cpp  train_model2.cpp
ncnn/: readme.txt
src/: detect.cpp
